# resnet18_dfa_dnnl

./: .gitignore  CMakeLists.txt  README.md  compare.py  device.h  inference.py  model_dumper.py  requirements.txt  resnet18_dfa_dnnl.cc
